--- a/index.html
+++ b/index.html
@@ -15,22 +15,77 @@
   
 </head>
 <body>
-  How many team members can I invite?
-  You can invite up to 2 additional users on the Free plan. There is no limit on 
-  team members for the Premium plan.
+  <header class="hero">
+    <div class="hero__container">
+      <section class="hero__container__pict">
+        <div class="container">
+          <img src="./images/bg-pattern-desktop.svg" alt="bg_pattern" class="container__pattern">
+          <img src="./images/illustration-woman-online-desktop.svg" alt="illustration" class="container__illustration">
+          
+        </div>
+      </section>
+      <section class="hero__container__faq">
+        <h1 class="title">FAQ</h1>
 
-  What is the maximum file upload size?
-  No more than 2GB. All files in your account must fit your allotted storage space.
 
-  How do I reset my password?
-  Click “Forgot password” from the login page or “Change password” from your profile page.
-  A reset link will be emailed to you.
+        <div class="card">
+          <div class="card__question">
+            <h3>How many team members can I invite?</h3>
+            <img src="./images/icon-arrow-down.svg" alt="arrow_down">
+          </div>
+          <div class="card__answear">
+            <p>You can invite up to 2 additional users on the Free plan. There is no limit on 
+              team members for the Premium plan.</p>
+          </div>
+        </div>
 
-  Can I cancel my subscription?
-  Yes! Send us a message and we’ll process your request no questions asked.
 
-  Do you provide additional support?
-  Chat and email support is available 24/7. Phone lines are open during normal business hours.
+        <div class="card">
+          <div class="card__question">
+            <h3>What is the maximum file upload size?</h3>
+            <img src="./images/icon-arrow-down.svg" alt="arrow_down">
+          </div>
+          <div class="card__answear">
+            <p>No more than 2GB. All files in your account must fit your allotted storage space.</p>
+          </div>
+        </div>
+
+
+        <div class="card">
+          <div class="card__question">
+            <h3>How do I reset my password?</h3>
+            <img src="./images/icon-arrow-down.svg" alt="arrow_down">
+          </div>
+          <div class="card__answear">
+            <p>Click “Forgot password” from the login page or “Change password” from your profile page.
+              A reset link will be emailed to you.</p>
+          </div>
+        </div>
+
+
+        <div class="card">
+          <div class="card__question">
+            <h3>Can I cancel my subscription?</h3>
+            <img src="./images/icon-arrow-down.svg" alt="arrow_down">
+          </div>
+          <div class="card__answear">
+            <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
+          </div>
+        </div>
+
+        
+        <div class="card">
+          <div class="card__question">
+            <h3>Do you provide additional support?</h3>
+            <img src="./images/icon-arrow-down.svg" alt="arrow_down">
+          </div>
+          <div class="card__answear">
+            <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+          </div>
+        </div>
+      </section>
+    </div>
+  </header>
 
 </body>
 </html>
