Done the JS part

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="card">
           <div class="card__question">
-            <h3>How many team members can I invite?</h3>
+            <h3 class="card__question__title">How many team members can I invite?</h3>
             <img src="./images/icon-arrow-down.svg" alt="arrow_down">
           </div>
           <div class="card__answear">
@@ -42,7 +42,7 @@
 
         <div class="card">
           <div class="card__question">
-            <h3>What is the maximum file upload size?</h3>
+            <h3 class="card__question__title">What is the maximum file upload size?</h3>
             <img src="./images/icon-arrow-down.svg" alt="arrow_down">
           </div>
           <div class="card__answear">
@@ -53,7 +53,7 @@
 
         <div class="card">
           <div class="card__question">
-            <h3>How do I reset my password?</h3>
+            <h3 class="card__question__title">How do I reset my password?</h3>
             <img src="./images/icon-arrow-down.svg" alt="arrow_down">
           </div>
           <div class="card__answear">
@@ -65,7 +65,7 @@
 
         <div class="card">
           <div class="card__question">
-            <h3>Can I cancel my subscription?</h3>
+            <h3 class="card__question__title">Can I cancel my subscription?</h3>
             <img src="./images/icon-arrow-down.svg" alt="arrow_down">
           </div>
           <div class="card__answear">
@@ -76,7 +76,7 @@
         
         <div class="card">
           <div class="card__question">
-            <h3>Do you provide additional support?</h3>
+            <h3 class="card__question__title">Do you provide additional support?</h3>
             <img src="./images/icon-arrow-down.svg" alt="arrow_down">
           </div>
           <div class="card__answear">
@@ -87,5 +87,6 @@
     </div>
   </header>
 
+  <script src="./dist/js/script.js"></script>
 </body>
 </html>
